# casbin-cpp

./: .clang-format  .gitignore  .releaserc.json  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  casbin.cpp  casbin.h  casbin.sln  cpplint.py  lgtm.yml  makefile  meson.build  setup.py  test.json
bindings/python/: CMakeLists.txt  main.cpp  py_abac_data.cpp  py_cached_enforcer.cpp  py_casbin.h  py_config.cpp  py_enforcer.cpp  py_model.cpp
casbin/: .clang-format  CMakeLists.txt  Matcher.cpp  Matcher.h  Operator.cpp  Operator.h  Source.def  Test.cpp  abac.cpp  abac.h  abac_data.cpp  abac_data.h  assertion.cpp  assertion.h  attribute_types.h  casbin.h  casbin.sln  casbin.vcxproj  casbin.vcxproj.filters  channel.cpp  channel.h  conf_adapter.cpp  conf_adapter.h  config.cpp  config.h  csv_adapter.cpp  csv_adapter.h  data_types.h  dllmain.cpp  duktape.h  effect.h  effector.cpp  effector.h  enforcer.cpp  enforcer.h  enforcer_cached.cpp  enforcer_cached.h  enforcer_interface.h  enforcer_synced.cpp  enforcer_synced.h  (+28 more)
casbin/Cparse/: builtin-features.cpp  containers.h  functions.cpp  functions.h  packToken.cpp  packToken.h
casbin/Cparse/builtin-features/: functions.inc  operations.inc  reservedWords.inc
casbin/IPParser/: Makefile
casbin/IPParser/exceptions/: ParseException.h
casbin/IPParser/parser/: CIDR.h  CIDRMask.h  IP.h  IPMask.h  IPNet.h  IPv4.h  allFF.h  byte.h  dtoi.h  equal.h  parseCIDR.h  parseIP.h  parseIPv4.h  parseIPv6.h  xtoi.h
casbin/casbin/: casbin.vcxproj  casbin.vcxproj.filters
casbin/casbin/config/: config.h
casbin/casbin/examples/: MoreParam.conf  MoreParam.csv  keymatch_policy.csv
casbin/casbin/ip/: ip.cpp
casbin/casbin/model/: assertion.cpp  assertion.h  function.cpp  model.cpp  model.h
casbin/config/: Config.h  ConfigInterface.h  config.cpp  config.h  config_interface.h  pch.h
casbin/config/testdata/: testini.ini
casbin/duktape/: duk_config.h  duktape.cpp  duktape.h  duktape_core.h  pch.h  scope.h
casbin/effect/: DefaultEffector.h  Effect.h  Effector.h  default_effector.cpp  default_effector.h  effect.h  effector.cpp  effector.h  pch.h
casbin/error/: error.h
casbin/errors/: exceptions.cpp  exceptions.h  rbac_errors.h
casbin/examples/: base.conf  base.csv  keymatch2_policy.csv  keymatch_policy.conf  rbac_policy.csv
casbin/exception/: CasbinAdapterException.h  CasbinEnforcerException.h  CasbinRBACException.h  IOException.h  IllegalArgumentException.h  MissingRequiredSections.h  casbin_adapter_exception.cpp  casbin_adapter_exception.h  casbin_enforcer_exception.cpp  casbin_enforcer_exception.h  casbin_rbac_exception.cpp  casbin_rbac_exception.h  illegal_argument_exception.cpp  illegal_argument_exception.h  io_exception.cpp  io_exception.h  missing_required_sections.cpp  missing_required_sections.h  unsupported_operation_exception.cpp  unsupported_operation_exception.h
casbin/exprtk/: exprtk.hpp
casbin/ip/: ip.cpp  ip.h
casbin/ip_parser/exception/: ParserException.h  parserException.cpp  parser_exception.cpp  parser_exception.h
casbin/ip_parser/exceptions/: ParserException.cpp
casbin/ip_parser/parser/: CIDRMask.cpp  CIDRMask.h  IP.cpp  IP.h  IPMask.h  IPNet.cpp  IPNet.h  IPv4.cpp  IPv4.h  Print.cpp  Print.h  allFF.cpp  allFF.h  byte.h  dtoi.cpp  dtoi.h  equal.cpp  equal.h  parseCIDR.cpp  parseCIDR.h  (+9 more)
casbin/log/: DefaultLogger.h  Logger.h  default_logger.cpp  default_logger.h  log_util.cpp  log_util.h  logger.cpp  logger.h
casbin/model/: Assertion.h  Function.h  Model.h  Policy.h  assertion.cpp  assertion.h  duktape_config.h  evaluator.cpp  evaluator.h  function.cpp  function.h  model.cpp  model.h  policy.cpp  policy_collection.cpp  scope_config.cpp  scope_config.h
casbin/persist/: Adapter.h  Adapter_Filtered.h  Watcher.h  adapter.cpp  adapter.h  adapter_filtered.cpp  adapter_filtered.h  batch_adapter.h  default_watcher.cpp  default_watcher.h  default_watcher_ex.cpp  default_watcher_ex.h  file_adapter.cpp  file_adapter.h  filtered_adapter.h  pch.h  persist.h  string_adapter.cpp  string_adapter.h  watcher.h  watcher_ex.h  watcher_update.h
casbin/rbac/: DefaultRoleManager.h  GroupRoleManager.h  RoleManager.h  default_role_manager.cpp  default_role_manager.h  group_role_manager.cpp  group_role_manager.h  rbac.h  role_manager.cpp  role_manager.h
casbin/util/: arrayEquals.h  arrayRemoveDuplicates.h  arrayToString.h  array_equals.cpp  array_equals.h  array_remove_duplicates.cpp  array_remove_duplicates.h  array_to_string.cpp  array_to_string.h  builtInFunctions.h  built_in_functions.cpp  built_in_functions.h  builtin_operators.cpp  builtin_operators.h  channel.cpp  channel.h  ends_with.cpp  ends_with.h  escapeAssertion.h  escape_assertion.cpp  escape_assertion.h  eval.cpp  findAllOccurences.h  find_all_occurences.cpp  find_all_occurences.h  is_instance_of.cpp  is_instance_of.h  join.cpp  join.h  joinSlice.h  join_slice.cpp  join_slice.h  matcher.cpp  matcher.h  operator.cpp  remove_comments.cpp  remove_comments.h  setSubtract.h  set_subtract.cpp  set_subtract.h  (+10 more)
lib/: meson.build
pycasbin/: CMakeLists.txt  README.md
pycasbin/benchmarks/: benchmark_model.py
pycasbin/src/: main.cpp  py_adapter.cpp  py_cached_enforcer.cpp  py_casbin.h  py_enforcer.cpp  py_synced_enforcer.cpp
pycasbin/tests/: config_path.py  test_adapter.py  test_cached_enforcer.py  test_model.py
tests/: CMakeLists.txt  built_in_functions_test.cpp  config_path.h  config_test.cpp  enforcer_cached_test.cpp  enforcer_synced_test.cpp  enforcer_test.cpp  management_api_test.cpp  model_enforcer_test.cpp  model_test.cpp  rbac_api_test.cpp  rbac_api_with_domains_test.cpp  role_manager_test.cpp  test_enforcer.cpp  util_test.cpp
tests/benchmarks/: CMakeLists.txt  config_path.h  enforcer_cached_b.cpp  enforcer_cached_b_inten.cpp  main.cpp  management_api_b.cpp  management_api_b_inten.cpp  model_b.cpp  model_b_inten.cpp  role_manager_b.cpp  role_manager_b_inten.cpp
tests/python/: config_path.py  pycasbin_test_suite.py  test_config.py  test_enforcer.py  test_model.py  test_synced_enforcer.py
(+337 files in other folders)
